--- a/2021-1/beamer/definiciones.tex
+++ b/2021-1/beamer/definiciones.tex
@@ -81,6 +81,16 @@
 {%
 	\vskip .2cm}% end code
 
+
+\newenvironment{preguntas}[1][]% environment name
+{% begin code
+    \par\vskip .2cm%
+    {\color{blue}Preguntas #1}%
+    \vskip .2cm
+}%
+{%
+    \vskip .2cm}% end code
+
 \newenvironment{ejercicio}[1][]% environment name
 {% begin code
 	\par\vskip .2cm%
