--- a/2021-1/apunte/main.tex
+++ b/2021-1/apunte/main.tex
@@ -5,6 +5,8 @@
 \makeindex  
 \input{classicthesis-config}
 \input{config-definiciones}
+%\setstretch{1.3}
+\parskip = 8pt
 \tolerance=10000
 \begin{document}
 	%\baselineskip=0.55truecm %original
