--- a/2021-1/tareas/tarea_06.tex
+++ b/2021-1/tareas/tarea_06.tex
@@ -110,7 +110,7 @@
 
 \newcommand{\tarea}[1]{
 	\begin{center}
-		{\Large Matemática Discreta I - 2020/1} \vskip.4cm
+		{\Large Matemática Discreta I - 2021/1} \vskip.4cm
 		{\Large Tarea #1}\vskip .4cm
 \end{center}}
 
@@ -143,12 +143,11 @@
 
 \begin{ejercicio}
 	\begin{enumerate}
-		\item[1.](30 pts) Probar usando  la definición de ''divide a'' que si $n | m$,  entonces $n | m^3$.
-		%\item[2.] (30 pts) Probar que para $n \ge 0$ se satisface $3 | 2^{3n+2} + 5^{n+3}$.  
+		\item[1.] (30 pts) Probar por inducción que para $n \ge 0$ se satisface $3 | 2^{3n+2} + 5^{n+3}$.  
 		\item[2.] 
 		\begin{enumerate}
-			\item[a)] (40 pts) Encontrar usando el algoritmo de Euclides $d = \operatorname{mcd}( 162, 138)$. 
-			\item[b)] (30 pts) Expresar $d$  como combinación lineal entera entre  $162$ y $138$.
+			\item[a)] (40 pts) Encontrar usando el algoritmo de Euclides $d = \operatorname{mcd}( 68, 50)$. 
+			\item[b)] (30 pts) Expresar $d$  como combinación lineal entera entre  $68$ y $50$.
 		\end{enumerate}	 
 	\end{enumerate}
 \end{ejercicio}
